==============
lxml changelog
==============

Under Development
=================

Features added
--------------

* The regular expression functions in XPath now support passing a node-set
  instead of a string

* ``Element.addnext(el)`` and ``Element.addprevious(el)`` methods to support
  adding processing instructions and comments around the root node

* Element.attrib now has a ``pop()`` method

* Extended type annotation in objectify: cleaner annotation namespace setup
  plus new ``xsiannotate()`` and ``deannotate()`` functions

* Support for custom Element class instantiation in lxml.sax: passing a
  ``makeelement`` function to the ElementTreeContentHandler will reuse the
  lookup context of that function

* '.' represents empty ObjectPath (identity)

* EXSLT RegExp support in standard XPath (not only XSLT)

* ``lxml.pyclasslookup`` module that can access the entire tree in read-only
  mode to help determining a suitable Element class

* ``Element.values()`` to accompany the existing ``.keys()`` and ``.items()``

* ``collectAttributes()`` C-function to build a list of attribute
  keys/values/items for a libxml2 node

Bugs fixed
----------

* More ET compatible behaviour when writing out XML declarations or not

* ``Element.attrib`` was missing ``clear()`` method

* More robust error handling in ``iterparse()``

* Documents lost their top-level PIs and comments on serialisation

* lxml.sax failed on comments and PIs. Comments are now properly ignored and
  PIs are copied.

* Thread safety in XPath evaluators

* Raise AssertionError when passing strings containing '\0' bytes

Other changes
-------------

* major refactoring in XPath/XSLT extension function code


1.3beta (2007-02-27)
====================

Features added
--------------

* ``DTD`` validator class (like ``RelaxNG`` and ``XMLSchema``)

* HTML generator helpers by Fredrik Lundh in ``lxml.htmlbuilder``

* ``ElementMaker`` XML generator by Fredrik Lundh in ``lxml.builder.E``
